--- a/README
+++ b/README
@@ -4,11 +4,11 @@
 This README file will help you get started on this project
 
 
-1. If you do not know you to use github and fork projects, learn that first.
+1. If you do not know how to use github and fork projects, learn that first.
 Without that you cannot get anywhere with this project
 
 2. Make sure you have RStudio and R installed on your computer.
-3. Also have access to MSExcel or any spreadsheet program that can open an .xlsx file
+3. Also have access to MSExcel or any spreadsheet program that can open a .xlsx file
 4. Once you fork the project and download it to your computer you are ready to start
 5. Complete your project
 6. Update your github repository online
