--- a/project1.Rmd
+++ b/project1.Rmd
@@ -22,13 +22,13 @@ options(width=120)
 #
 # some notes on the data
 # the file has 15 min interval data from 1/1/2014 to 12/30/2015
-# when you import the data, the first column of your data set should be dates in POSIXct format
+# when you import the data, the first column of your dataset should be dates in POSIXct format
 # HINT: use the strptime and as.POSIX.ct functions to form the eloaddf$dates
 #
 # write a function getweatherdf() - you will assign the return value to weatherdf
 # 2. Next load the weather data from NOAA into a data frame weatherdf. The data is in 1874606932872dat.txt
 # This is 1 hour interval data for a specific weather station close to
-# the location of the site from which electric load was obtained
+# the location of the site from which electric load data was obtained
 #
 # you need to use fixed width parsing to read the data into a data frame.
 # add a column called dates to the dataframe similar to #1 above
@@ -63,7 +63,7 @@ Now let us do some plotting of the load data
 
 ```{r}
 # form a dataframe called eloadhrdf with two columns dates, kwh
-# this data frame sums the 15min kwh in the eloaddf to hourly data
+# this dataframe sums the 15min kwh in the eloaddf to hourly data
 # next create a plot frame with two panels side by side
 # On the left panel show a heat map of kwh data for 2014 with x-axis as months and y-axis as hour of the day (1 to 24). use subsetting of the data frame rather than copying the data into yet another data frame
 # On the right panel show a heat map of kwh data for 2015 with x-axis as months and y-axis as hour of the day (1 to 24). use subsetting of the data frame rather than copying the data into yet another data frame
@@ -79,7 +79,7 @@ We plot the weather data using boxplot to explore the variation in temperature g
 We are now ready to build a simple predictive model.
 
 ```{r}
-create a dataframe with hourly interval data inside your function by 
+#create a dataframe with hourly interval data inside your function by 
 # combining selective columns from eloadhrdf and weatherdf
 # your dataframe should be called modeldatadf and the columns should be dates, year, month, hrofday, temp, kwh
 #
@@ -113,8 +113,8 @@ Lets now compare the predicted model for 2015 with the bill data kwh!
 #
 # run your machine learning model and create a data frame of dates, kwh for 1hr interval data for 2015. note you
 # may need to include the last few days of 2014 in your dataset due to the billing dates in January (see billdata.xlsx)
-# call your data frame pred2015dfd.
-# now for each of the 12 rows in the billsdf, sum the kwh for the date range in each of the rows from pred2015df 
+# call your data frame pred2015df.
+# now for each of the 12 rows (billing periods) in the billsdf, sum the kwh for the date range in each of the rows from pred2015df for the corresponding start and end of billing in billsdf 
 # create a resultsdf which has billdate, predkwh (from pred2015df), actualkwh (from billsdf)
 # display the results
 ```
